Updated header and mobile menu stuff. Spacing issues on mobile too

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,15 +98,43 @@ p {
         padding: 20px;
       }
     }
+    .mobile__menu--button {
+      display: none;
+      cursor: pointer;
+      font-size: 30px;
+      position: absolute;
+      top: 22px;
+      right: 25px;
+      color: white;
+      @media screen and (max-width: 1024px) {
+        display: block;
+      }
+    }
   }
   &__bottom {
     padding: 20px;
     @media screen and (max-width: 640px) {
-      display: none;
+      // display: none;
+      height: 0;
+      overflow-y: hidden;
+      padding: 0;
+      transition: all .2s ease-in-out;
+      .nav__list-item {
+        display: block;
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: 14px;
+        color: white;
+        margin-top: 20px;
+        margin-right: 0;
+      }
+      &.active {
+        height: 250px;
+        padding: 20px;
+      }
     }
   }
 }
-
 .nav__list-item {
   display: inline;
   text-transform: uppercase;
@@ -145,8 +173,11 @@ p {
   background-image: url('../images/123.jpg');
   background-size: cover;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center center;
   height: 800px;
+  @media screen and (max-width: 1024px) {
+    background-attachment: unset;
+  }
   &__image-holder {
     width: 100%;
     height: 100%;
@@ -170,6 +201,9 @@ p {
     font-weight: 300;
     text-align: center;
     text-shadow: 0px 0px 10px #3c3c3c;
+    @media screen and (max-width: 1024px) {
+      top: 25%;
+    }
   }
 }
 
@@ -179,6 +213,9 @@ p {
   padding: 20px;
   height: 400px;
   position: relative;
+  @media screen and (max-width: 1024px) {
+    padding-top: 175px;
+  }
   &::before {
     content: url('../images/glitter.png');
     position: absolute;
@@ -354,5 +391,5 @@ img {
   }
 }
 .hidden {
-  display: none; 
+  display: none;
 }
